Ускорена сборка за счет кеширования. Настроено подключение плагинов через js файлы (ранее через Pug). Добавлены блоки range-slider/checkbox/filter.

--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -42,7 +42,7 @@ mixin footer(options)
                 +input({
                     type: 'email',
                     placeholder: 'Email',
-                    mode: 'subscribe',
+                    mode: 'subscribe-style',
                 })
 
         .footer__row.footer__row--bottom
