--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -2,7 +2,8 @@
     options.id = задание id для input
     options.type = задание type для input
     options.placeholder = задание placeholder для input
-    options.mode - "subscribe"/"dropdown" - если включен, то добавляет полю особую стилизацию
+    ToDo переименовать mode
+    options.mode - "subscribe-style"/"dropdown-style" - если включен, то добавляет полю особую стилизацию
     options.half - true - input должен занимать половину родителя
     options.labelText - задает текст для <label>
 
