--- a/src/pages/catalog/catalog.pug
+++ b/src/pages/catalog/catalog.pug
@@ -3,10 +3,8 @@ extends ../base/base
 block variables
     include ./catalog-data.pug
     include ../../components/room-card/room-card
+    include ../../components/filter/filter
 
-
-block links
-    link(href="./plugins/datepicker/css/datepicker.css" rel="stylesheet")
 
 block title
     | Starter kit
@@ -15,7 +13,7 @@ block main
     .catalog
         .catalog__wrapper-left
             .catalog__filter
-                //+filter()
+                +filter()
         .catalog__wrapper-right
             .catalog__lead  Номера, которые мы для вас подобрали
             .catalog__cards-box
@@ -26,5 +24,7 @@ block main
             .catalog__pagination
                 //+pagination()
 
-block scripts
+
+
+
 
