--- a/src/pages/catalog/catalog.scss
+++ b/src/pages/catalog/catalog.scss
@@ -1,8 +1,8 @@
 .catalog {
   box-sizing: border-box;
   width: 100%;
-  padding: 0.5rem 10rem;
-  grid-column-gap: 60px;
+  padding: 2.25rem 10rem 2rem;
+  grid-column-gap: 50px;
   display: grid;
   grid-template-areas: 'left right';
   grid-template-columns: 1fr 3fr;
@@ -19,7 +19,7 @@
   }
 
   &__lead {
-    padding: 25px 0 20px;
+    padding-bottom: 20px;
     font-size: 1.75rem;
     font-weight: bold;
   }
