Кнопка apply из calendar добавляется отдельным кодом + коррекция стилей Коррекция dropdown

--- a/src/components/calendar/calendar.pug
+++ b/src/components/calendar/calendar.pug
@@ -13,6 +13,6 @@ mixin calendar(options)
                 labelText: item.labelText,
                 type: 'text',
                 placeholder: 'ДД.ММ.ГГГГ',
-                mode: 'dropdown',
+                mode: 'dropdown-style',
                 half: half,
             })(class=`js--calendar-field--${item.type}`)
