--- a/src/components/dropdown/dropdown.scss
+++ b/src/components/dropdown/dropdown.scss
@@ -10,7 +10,7 @@
     top: 100%;
     left: 0;
     right: 0;
-    z-index: 1;
+    z-index: 5;
 
     box-sizing: border-box;
     padding: 1rem 1rem 0.5rem 1rem;
@@ -25,6 +25,7 @@
   }
 
   &__list {
+    font-size: 0.9rem;
     margin: 0;
     margin-bottom: 1rem;
     padding: 0;
@@ -40,16 +41,12 @@
     margin-bottom: 0.5rem;
 
     &-text {
-      max-width: 65%;
-    }
-
-    &-count {
-      margin: 0.5rem 1rem;
+      max-width: 60%;
     }
 
     &-button {
-      width: 30px;
-      height: 30px;
+      width: 2rem;
+      height: 2rem;
       background-color: white;
       color: $dark-shade_0-50;
       border: 1px solid $dark-shade_0-25;
@@ -59,6 +56,13 @@
         opacity: 0.5;
       }
     }
+  }
+
+  &__button-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-width: 35%;
   }
 
   &__bottom-buttons {
