--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -42,7 +42,7 @@
     border: 2px solid transparent;
     border-top: none;
     border-left: none;
-    border-image: $gradient;
+    border-image: $gradient-purple;
     border-image-slice: 1;
     transition: 0.4s;
     transform: rotate(45deg);
