--- a/src/pages/catalog/catalog-data.pug
+++ b/src/pages/catalog/catalog-data.pug
@@ -8,10 +8,10 @@
             isLuxury: true,
             href: '888.html',
             slides: [
-                './images/room-888.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-888.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '840',
@@ -20,10 +20,10 @@
             reviews: '65',
             href: '840.html',
             slides: [
-                './images/room-840.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-840.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '980',
@@ -33,10 +33,10 @@
             isLuxury: true,
             href: '980.html',
             slides: [
-                './images/room-980.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-980.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '856',
@@ -45,10 +45,10 @@
             reviews: '19',
             href: '856.html',
             slides: [
-                './images/room-856.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-856.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '740',
@@ -57,10 +57,10 @@
             reviews: '44',
             href: '740.html',
             slides: [
-                './images/room-740.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-740.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '982',
@@ -69,10 +69,10 @@
             reviews: '56',
             href: '982.html',
             slides: [
-                './images/room-982.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-982.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '678',
@@ -81,10 +81,10 @@
             reviews: '45',
             href: '678.html',
             slides: [
-                './images/room-678.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-678.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '450',
@@ -93,10 +93,10 @@
             reviews: '39',
             href: '450.html',
             slides: [
-                './images/room-450.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-450.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '350',
@@ -105,10 +105,10 @@
             reviews: '77',
             href: '350.html',
             slides: [
-                './images/room-350.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-350.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '666',
@@ -118,10 +118,10 @@
             isLuxury: true,
             href: '666.html',
             slides: [
-                './images/room-666.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-666.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '444',
@@ -130,10 +130,10 @@
             reviews: '15',
             href: '444.html',
             slides: [
-                './images/room-444.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-444.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         }, {
             number: '352',
@@ -142,10 +142,10 @@
             reviews: '55',
             href: '352.html',
             slides: [
-                './images/room-352.jpg',
-                './images/placeholder.png',
-                './images/placeholder.png',
-                './images/placeholder.png',
+                './images/catalog/room-352.jpg',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
+                './images/catalog/placeholder.png',
             ]
         },
     ]
