--- a/src/components/button/button.scss
+++ b/src/components/button/button.scss
@@ -33,7 +33,7 @@
   &--filled {
     padding: 7px 20px 9px;
     color: white;
-    background: $gradient;
+    background: $gradient-purple;
   }
 
   // Hollow
