--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
-    padding: 0 10rem;
+    padding: $site-padding;
 
 
     &__row {
