--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,10 +1,13 @@
+@import '../../theme/variables';
 .header {
   box-sizing: border-box;
   display: flex;
   justify-content: flex-end;
   flex: 1 0 auto;
-  padding: 0.9rem 10rem;
   align-items: center;
+  padding: $site-padding;
+  padding-top: 0.9rem;
+  padding-bottom: 0.9rem;
   box-shadow: 0 5px 15px -10px rgba(0, 0, 0, 0.5);
   &__menu {
     margin-right: 1.25rem;
