--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -12,6 +12,8 @@
   border-radius: 2px;
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.7);
 
+  & label { color: $dark-shade_1; }
+
   &__heading {
     margin-bottom: 1.5rem;
     font-size: 1.75rem;
@@ -26,6 +28,10 @@
 
   &__dropdown {
     margin-bottom: 30px;
+
+    & + .modal__price-estimation {
+      margin-top: -10px;
+    }
   }
 
   &__radio {
@@ -48,6 +54,22 @@
     }
   }
 
+  &__tooltip {
+    display: inline-block;
+    margin-right: auto;
+    margin-left: 0.5rem;
+    width: 1.25rem;
+    height: 1.25rem;
+    font-size: 1rem;
+    font-weight: bold;
+    color: $dark-shade_0-25;
+    text-align: center;
+    border: 2px solid $dark-shade_0-25;
+    border-radius: 50%;
+    cursor: pointer;
+    transform: rotate(180deg);
+  }
+
   &__button button {
     padding: 16px 20px 17px;
   }
@@ -67,6 +89,66 @@
     justify-content: space-between;
     align-items: center;
     padding: 30px 0 0;
-
   }
+
+  // Описание модального окна оформления заказа
+  // на странице соответствующей комнаты
+  &__room-info {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    margin-bottom: 20px;
+
+    & h3 {
+      color: $dark-shade_1;
+      font-size: 1.7rem;
+      margin: 0;
+      margin-right: 0.5rem;
+      & span:first-child {
+        margin-right: 0.2rem;
+        font-size: 1rem;
+      }
+    }
+  }
+
+  &__luxury-flag {
+    margin-right: auto;
+    color: $purple;
+    font-weight: bold;
+  }
+
+  &__price {
+    font-weight: bold;
+
+    &-text {
+      color: $dark-shade_0-50;
+    }
+  }
+
+  &__price-estimation {
+    padding-bottom: 10px;
+
+    & div {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      margin-bottom: 12px;
+      align-items: flex-end;
+
+      &:last-child {
+        margin-top: 48px;
+        font-size: 1.4rem;
+        color: $dark-shade_1;
+        font-weight: bold;
+        & span:nth-child(2) {
+          width: 100%;
+          flex-shrink: 1;
+          padding-bottom: 5px;
+          border-bottom: 1px dotted $dark-shade_0-25;
+        }
+      }
+    }
+  }
+
+
 }
