--- a/src/pages/catalog/catalog-data.pug
+++ b/src/pages/catalog/catalog-data.pug
@@ -9,9 +9,9 @@
             href: '888.html',
             slides: [
                 './images/catalog/room-888.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '840',
@@ -21,9 +21,9 @@
             href: '840.html',
             slides: [
                 './images/catalog/room-840.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '980',
@@ -34,9 +34,9 @@
             href: '980.html',
             slides: [
                 './images/catalog/room-980.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '856',
@@ -46,9 +46,9 @@
             href: '856.html',
             slides: [
                 './images/catalog/room-856.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '740',
@@ -58,9 +58,9 @@
             href: '740.html',
             slides: [
                 './images/catalog/room-740.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '982',
@@ -70,9 +70,9 @@
             href: '982.html',
             slides: [
                 './images/catalog/room-982.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '678',
@@ -82,9 +82,9 @@
             href: '678.html',
             slides: [
                 './images/catalog/room-678.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '450',
@@ -94,9 +94,9 @@
             href: '450.html',
             slides: [
                 './images/catalog/room-450.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '350',
@@ -106,9 +106,9 @@
             href: '350.html',
             slides: [
                 './images/catalog/room-350.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '666',
@@ -119,10 +119,9 @@
             href: '666.html',
             slides: [
                 './images/catalog/room-666.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-            ]
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',         ]
         }, {
             number: '444',
             cost: '5000',
@@ -131,9 +130,9 @@
             href: '444.html',
             slides: [
                 './images/catalog/room-444.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         }, {
             number: '352',
@@ -143,9 +142,9 @@
             href: '352.html',
             slides: [
                 './images/catalog/room-352.jpg',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
-                './images/catalog/placeholder.png',
+                './images/catalog/placeholder-green.png',
+                './images/catalog/placeholder-blue.png',
+                './images/catalog/placeholder-yellow.png',
             ]
         },
     ]
