--- a/src/components/room-card/room-card.scss
+++ b/src/components/room-card/room-card.scss
@@ -12,13 +12,17 @@
 
     &-buttons {
       position: absolute;
-      display: flex;
+      display: none;
       justify-content: space-between;
       width: 100%;
       height: 99%;
       max-height: 150px;
       top: 0;
     }
+  }
+
+  &:hover .room-card__slider-buttons {
+    display: flex;
   }
 
   &__slide {
@@ -65,6 +69,10 @@
     margin-left: 0.5rem;
     border: 1px solid white;
     border-radius: 50%;
+
+    &--current {
+      background: white;
+    }
   }
 
   &__info-wrapper {
@@ -72,7 +80,7 @@
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 25px 20px 20px;
+    padding: 23px 20px 15px;
 
 
     & span {
