--- a/src/components/input/input.pug
+++ b/src/components/input/input.pug
@@ -20,3 +20,5 @@ mixin input(options)
                 type=options.type
                 placeholder=options.placeholder
                 )&attributes(attributes)
+            if (options.mode === 'dropdown-style')
+                span.input__decoration-arrow
